# convex_object_detection

./: CMakeLists.txt  README.md  package.xml
include/: convexhull_3d.h  utils.h
msg/: CameraDetectorResult.msg  Instance.msg
scripts/: 000123.npy  npy2pcd.py  test.py  viz.py
src/: fusion_object_detector.cpp  object_detector.cpp  video_generator.cpp
